# Gomoku-AI

./: .gitignore  CMakeLists.txt  README.md  arduino.ino
src/: Core.cpp  Core.h  Piece.cpp  Piece.h  SerialHandler.cpp  SerialHandler.h  Timer.cpp
